--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   }
   
   .caixa-principal{
+    border-radius: 20px;
     background-color: var(--cor-principal);
     width: 90%;
     max-width: 600px;
